[project]
name = "raztint"
version = "0.1.1"
description = "A zero-dependency Python library for ANSI coloring and smart CLI icons with automatic environment detection"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Raz", email = "real.raz.dev@gmail.com" }
]
maintainers = [
    { name = "Raz", email = "real.raz.dev@gmail.com" }
]
keywords = [
    "terminal",
    "color",
    "colour",
    "console",
    "cli",
    "ansi",
    "terminal-colors",
    "nerd-fonts",
    "icons",
    "text-coloring",
    "cross-platform",
]
dependencies = []

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/razbuild/raztint"
Documentation = "https://github.com/razbuild/raztint#readme"
Repository = "https://github.com/razbuild/raztint"
Issues = "https://github.com/razbuild/raztint/issues"
Changelog = "https://github.com/razbuild/raztint/releases"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
lint = ["ruff"]
formatter = ["black"]
typecheck = ["mypy"]
coverage = ["coverage", "pytest-cov"]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy", "coverage"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
packages = ["src/raztint"]

[tool.hatchling.build.targets.wheel]
packages = ["src/raztint"]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]